Fix too big of list margins

--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -12,6 +12,9 @@
 .cards-list-item-description
     font-size: var(--font-size-base)
 
+li p
+    margin-bottom: 0
+
 .headerlink
     opacity: 0
     
